--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "varal",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A Node Framework For Web Artisans",
   "main": "index.js",
   "scripts": {},
@@ -9,6 +9,7 @@
   "dependencies": {
     "handlebars": "^4.0.11",
     "json-stable-stringify": "^1.0.1",
+    "multiparty": "^4.1.3",
     "serve-static": "^1.13.1"
   },
   "repository": "dmpty/varal",
