--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "varal",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A Node Framework For Web Artisans",
   "main": "index.js",
   "scripts": {},
@@ -13,7 +13,8 @@
     "dateformat": "^3.0.2",
     "handlebars": "^4.0.11",
     "multiparty": "^4.1.3",
-    "serve-static": "^1.13.1"
+    "serve-static": "^1.13.1",
+    "varal-container": "^1.0.0"
   },
   "repository": "dmpty/varal",
   "keywords": [
