--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "varal",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "A Node Framework For Web Artisans",
   "main": "index.js",
   "scripts": {},
@@ -10,6 +10,8 @@
     "node": ">= 7.6.0"
   },
   "dependencies": {
+    "cookie": "^0.3.1",
+    "cookie-signature": "^1.0.6",
     "dateformat": "^3.0.2",
     "handlebars": "^4.0.11",
     "multiparty": "^4.1.3",
