--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "varal",
-  "version": "0.5.4",
+  "version": "0.6.0",
   "description": "A Node Framework For Web Artisans",
   "main": "index.js",
   "scripts": {},
@@ -10,10 +10,10 @@
     "node": ">= 7.6.0"
   },
   "dependencies": {
+    "art-template": "^4.12.2",
     "cookie": "^0.3.1",
     "cookie-signature": "^1.0.6",
     "dateformat": "^3.0.2",
-    "handlebars": "^4.0.11",
     "multiparty": "^4.1.3",
     "serve-static": "^1.13.1",
     "varal-container": "^1.0.4"
