--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "serve-static": "^1.13.1",
     "varal-container": "^1.0.4"
   },
+  "devDependencies": {
+    "eslint": "^4.15.0"
+  },
   "repository": "dmpty/varal",
   "keywords": [
     "varal",
