--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "varal",
-  "version": "0.6.8",
-  "description": "A Node Framework For Web Artisans",
+  "version": "0.7.0",
+  "description": "A Node Framework",
   "main": "index.js",
   "scripts": {},
   "author": "dmpty",
@@ -13,7 +13,6 @@
     "art-template": "^4.12.2",
     "cookie": "^0.3.1",
     "cookie-signature": "^1.0.6",
-    "dateformat": "^3.0.2",
     "multiparty": "^4.1.3",
     "serve-static": "^1.13.1",
     "varal-container": "^1.0.5"
